# rkafka

./: .gitignore  Cargo.toml  README.md  supported_versions.json  supported_versions_valid.json  your_program.sh
src/: handler.rs  lib.rs  main.rs
src/binary/: decode.rs  encode.rs
src/protocol/: mod.rs  types.rs
src/protocol/schema/: mod.rs
src/protocol/schema/requests/: ApiVersions.json  apiversions.rs  describetopic.rs  mod.rs
src/protocol/schema/responses/: ApiVersions.json
src/protocol/types/: compactarray.rs  compactstring.rs  mod.rs  nullstring.rs  partition.rs  record.rs  topicstr.rs
src/rpc/: decode.rs  encode.rs  mod.rs
