[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Edgar Modesto <edgarmodesto23@gmail.com>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.97"                                # error handling
bytes = "1.10.1"                                  # helps manage buffers
thiserror = "2.0.12"                             # error handling
tokio = {version = "1.44.0", features = ["full"]}
